# airbyte-connector-generator-poc

./: .gitignore  LICENSE  README.md  airbyte_connector.yaml  openapi.yaml  pyproject.toml
airbyte_connector_generator_poc/: docs_parser.py  html_tree.py  local_cache.py  logger.py  main.py  openapi_generator.py  openapi_spec.py  scraper.py  utils.py
airbyte_connector_generator_poc/airbyte/: airbyte.py  pagination_yaml.md
